[tool.poetry]
name = "dbuff-proxy"
version = "0.1.0"
description = ""
authors = ["LightningOrionis <krasovsky17igor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
black = "^24.3.0"
mypy = "^1.9.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"
types-all = "^1.0.0"
flake8-bugbear = "^24.2.6"
flake8-debugger = "^4.1.2"
flake8-broken-line = "^1.0.0"
flake8-comments = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party= ["app"]

[tool.black]
line-length=120

[tool.flake8]
max-line-length=120


